# solana-stablecoin-standard

./: .gitignore  Anchor.toml  Cargo.toml  README.md  full_test_log.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
docs/: API.md  ARCHITECTURE.md  CLI.md  COMPLIANCE.md  OPERATIONS.md  SDK.md  SSS-1.md  SSS-2.md
programs-sss-token/: Anchor.toml
programs-sss-token/programs/programs-sss-token/: Cargo.toml
programs-sss-token/programs/programs-sss-token/src/: lib.rs
programs-sss-token/tests/: programs-sss-token.ts
programs/sss-token/: Cargo.toml
programs/sss-token/src/: error.rs  lib.rs  state.rs  utils.rs
programs/sss-token/src/instructions/: add_to_blacklist.rs  burn.rs  freeze_account.rs  initialize.rs  mint.rs  mod.rs  pause.rs  remove_from_blacklist.rs  seize.rs  thaw_account.rs  transfer_authority.rs  unpause.rs  update_minter.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: lib.rs
services/: docker-compose.yml
services/api/: package.json
services/api/src/: index.ts
services/api/src/routes/: compliance.ts  core.ts
services/indexer/: package.json
services/indexer/src/: index.ts
services/webhook/: Dockerfile  package.json
services/webhook/src/: index.ts
tests/: compliance.spec.ts  package.json  rbac.spec.ts  sss-1.spec.ts  sss-2.spec.ts  tsconfig.json
tests/fixtures/: setup.ts
