[workspace]
members = [
    "programs/sss-token",
    "programs/transfer-hook"
]
resolver = "2"

[workspace.dependencies]
# Pin to last known-working version — v3.1.10 has a compile bug in with_fee.rs
solana-zk-token-sdk = "=3.1.9"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"
