[package]
name = "sss-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_token"

[features]
default = ["init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022", "metadata"] }
